--- a/notebooks/Tutorial_plotting_maps.ipynb
+++ b/notebooks/Tutorial_plotting_maps.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "The fundamental problem with vizualizing: \n",
     "\n",
-    "Our medium of presentation media is flat ...\n",
+    "Our medium of presentation (paper/screen) is flat ...\n",
     "\n",
     "![paper_screen](https://raw.githubusercontent.com/SciTools/cartopy-tutorial/master/static/flat_medium.jpg)"
    ]
